Animation of mug color change added

--- a/style.css
+++ b/style.css
@@ -224,6 +224,11 @@ li:hover {
     transform: translateY(10px);
 }
 
+#mainImg {
+    opacity: 1;
+    transition: opacity 0.2s; /* Плавный переход для затухания */
+}
+
 /* tablet */
 @media screen and (max-width: 1240px) {
     .card {
